<resources>
    <string name="empty_state_title">No upcoming plans yet!</string>
    <string name="empty_state_subtitle">All your created and pinned plans appear here.\nHow about initiating one now?</string>
    <string name="empty_state_icon">empty icon</string>
    <string name="error_state_title">Oops! This is embarrassing..</string>
    <string name="error_state_subtitle">Looks like something went wrong. We\'re being notified about this issue. Sorry about that.</string>
    <string name="error_state_icon">error icon</string>
    <string name="event_card_image_content_description">event highlight image</string>
    <string name="event_card_location_content_description">event map</string>
    <string name="event_card_location_placeholder">Retrieving location…</string>
    <string name="board_item_header_this_week">This week</string>
    <string name="board_item_header_next_week">Next week</string>
    <string name="board_item_header_other_weeks">In %1$s weeks</string>
    <string name="board_item_header_no_date">No date</string>
    <string name="event_card_location_latlng">%1$s, %2$s</string>
    <string name="event_card_header_last_week">Last week</string>
    <string name="event_card_header_last_n_weeks">%1$s weeks ago</string>
    <string name="board_item_header_undefined">Undefined</string>
    <string name="event_attendee_remaining_count">+%1$s</string>
    <string name="event_card_join_success">%1$s confirmed</string>
    <string name="event_card_maybe_success">%1$s unconfirmed</string>
    <string name="event_card_background_transition">event_card_background_transition</string>
    <string name="event_item_name_hint">What\'s up?</string>
    <string name="board_item_edited">Item updated</string>
    <string name="event_item_start_date_placeholder">Set start time</string>
    <string name="event_item_end_date_placeholder">Set end time</string>
    <string name="event_item_name_helper">e.g. Play tennis tomorrow at 9</string>
    <string name="event_item_name_error">Name cannot be empty</string>
    <string name="event_item_location_hint">Add a location</string>
    <string name="event_item_transition_view">event_item_transition_view</string>
    <string name="event_item_attendee_title">%1$s going</string>
    <string name="event_item_action_join">join</string>
    <string name="event_item_action_leave">leave</string>
    <string name="event_item_note_hint">Add more info</string>
    <string name="board_item_created">Item added</string>
    <string name="board_item_deleted">Item deleted</string>
    <string name="event_item_action_plan">plan</string>
    <string name="event_item_view_plan">view plan</string>
    <string name="event_item_action_set_recurrence">Set recurrence</string>
    <string name="event_plan_user_attending">You\'re going | %1$s total</string>
    <string name="event_plan_user_not_attending">You\'re not going | %1$s total</string>
    <string name="event_plan_date_generic_instruction">Propose one or more dates for this event!</string>
    <string name="event_plan_date_vote_generic_instruction">Proposed dates will appear below. Organizers can select one to change the time of this event.</string>
    <string name="event_plan_open_vote">Open Vote</string>
    <string name="event_plan_close_vote">Close Vote</string>
    <string name="event_plan_date_choose_poll_end_title">select end time</string>
    <string name="event_plan_date_reset_poll_start_time">reset start time</string>
    <string name="event_plan_date_no_selection">no time selected</string>
    <string name="event_plan_date_select">set time as\n%1$s %2$s</string>
    <string name="event_plan_date_select_completed">Time set as %1$s %2$s</string>
    <string name="event_plan_place_generic_instruction">Pick some places for this event.\nBelow are what were chosen and suggested!</string>
    <string name="event_plan_place_vote_generic_instruction">Tap one of the places below to vote for it. Don\'t like the suggestions? Try adding your own!</string>
    <string name="event_plan_place_add">Add</string>
    <string name="event_plan_place_added">Added</string>
    <string name="event_plan_place_no_selection">no place selected</string>
    <string name="event_plan_place_select">set place as\n%1$s</string>
    <string name="event_plan_place_select_completed">Place set as %1$s</string>
    <string name="event_item_action_view_map">map</string>
    <string name="event_item_action_navigate">direction</string>
    <string name="event_plan_place_add_button">Add a place</string>
    <string name="board_action_new_item">Create New</string>
    <string name="board_action_customize">Customize</string>
    <string name="board_item_preference_title">Customize</string>
    <string name="event_item_preference_calendars">Calendars</string>
    <string name="event_item_preference_empty">No items</string>
    <string name="error_no_calendar_permissions">Enable calendar permission to sync events from your calendars. Allow?</string>
    <string name="error_calendar_preference_generic">Error retrieving your calendars from this device</string>
    <string name="event_card_calendar_source">From your calendar</string>
    <string name="board_item_not_editable">You cannot edit details of this item</string>
    <string name="event_item_no_location_placeholder">No location info</string>
    <string name="event_item_source_placeholder">Save to your calendar?</string>
    <string name="event_item_source_none">This board</string>
    <string name="event_item_select_sources">Save this to…</string>
    <string name="date_picker_full_day">Full day</string>
    <string name="date_picker_choice_morning">Morning</string>
    <string name="date_picker_choice_noon">Noon</string>
    <string name="date_picker_choice_afternoon">Afternoon</string>
    <string name="date_picker_choice_evening">Evening</string>
    <string name="date_picker_choice_night">Night</string>
    <string name="date_picker_more_options">Swipe up for more options</string>
    <string name="date_picker_collapsed_view">date_picker_collapsed_view</string>
    <string name="date_picker_expanded_view">date_picker_expanded_view</string>
    <string name="event_item_action_call_place">call</string>
    <string name="event_item_pick_place">search location</string>
    <string name="error_no_location_permission">Enable location permission to view your location. Allow?</string>
    <string name="event_item_edit_time">Edit Time</string>
    <string name="event_item_date_time_hint">e.g. tmr afternoon</string>
    <plurals name="date_picker_event_count">
        <item quantity="one">%s event on this date</item>
        <item quantity="other">%s events on this date</item>
    </plurals>
    <string name="event_picker_no_date_selected">Select a date to see more details</string>
    <string name="event_item_recurring_save_option_title">Save changes to…</string>
    <string name="event_item_recurring_save_option_all">All of the events</string>
    <string name="event_item_recurring_save_option_single">Only this event</string>
    <string name="event_item_recurring_delete_option_title">Delete which event?</string>
</resources>
