<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".event.EventItemActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_expand_vertical_margin"
            android:layout_marginStart="@dimen/card_expand_horizontal_margin"
            android:layout_marginEnd="@dimen/card_expand_horizontal_margin"
            android:layout_marginBottom="@dimen/card_expand_vertical_margin"
            android:transitionName="@string/event_card_background_transition"
            style="@style/CardView.BoardItem" >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/event_item_root_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/card_content_padding"
                android:focusableInTouchMode="true" >

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/event_item_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:contentDescription="@string/event_card_image_content_description" />

                <io.jitrapon.glom.base.ui.widget.GlomTextInputLayout
                    style="@style/Widget.Glom.TextInputLayout"
                    app:hintTextAppearance="@style/Widget.Glom.TextInputLayout.HintTextAppearance"
                    android:id="@+id/event_item_title_til"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="@dimen/card_content_padding"
                    app:errorTextAppearance="@style/Widget.Glom.TextInputLayout.ErrorTextAppearance" >

                    <io.jitrapon.glom.base.ui.widget.GlomAutoCompleteTextView
                        style="@style/TextAppearance.H1"
                        android:theme="@style/Theme.Glom.EditText.Title"
                        android:id="@+id/event_item_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_item_name_hint" />

                </io.jitrapon.glom.base.ui.widget.GlomTextInputLayout>

                <ImageView
                    android:id="@+id/event_item_clock_icon"
                    android:layout_width="@dimen/card_icon_small"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_time"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_title_til"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/card_content_padding" />

                <TextView
                    style="@style/CardView.TextView"
                    android:id="@+id/event_item_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_content_padding"
                    android:layout_marginTop="1dp"
                    app:layout_constraintStart_toEndOf="@+id/event_item_clock_icon"
                    app:layout_constraintTop_toTopOf="@+id/event_item_clock_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintWidth_percent="0.42" />

                <View
                    android:id="@+id/event_item_time_separator"
                    android:layout_width="0dp"
                    android:layout_height="1dip"
                    app:layout_constraintStart_toStartOf="@+id/event_item_start_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_start_time"
                    android:background="@color/dark_grey"
                    android:layout_marginTop="@dimen/card_expand_space_margin"
                    android:layout_marginEnd="@dimen/card_content_padding" />

                <TextView
                    style="@style/CardView.TextView"
                    android:id="@+id/event_item_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/event_item_clock_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_item_start_time"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="@dimen/card_content_padding"
                    android:gravity="end" />

                <ImageView
                    android:id="@+id/event_item_location_icon"
                    android:layout_width="@dimen/card_icon_small"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_marker"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_time_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/card_content_padding"
                    android:layout_marginTop="@dimen/card_expand_space_margin"
                    android:clickable="true"
                    android:focusable="true" />

                <io.jitrapon.glom.base.ui.widget.GlomAutoCompleteTextView
                    style="@style/CardView.EditText"
                    android:id="@+id/event_item_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_time_separator"
                    app:layout_constraintStart_toEndOf="@+id/event_item_location_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/card_expand_space_margin"
                    android:layout_marginStart="@dimen/card_content_padding"
                    android:layout_marginEnd="@dimen/card_content_padding" />

                <View
                    android:id="@+id/event_item_location_separator"
                    android:layout_width="0dp"
                    android:layout_height="1dip"
                    app:layout_constraintStart_toStartOf="@+id/event_item_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_location"
                    android:background="@color/dark_grey"
                    android:layout_marginTop="@dimen/card_expand_space_margin"
                    android:layout_marginEnd="@dimen/card_content_padding" />

                <android.support.v4.widget.Space
                    android:id="@+id/event_item_attendee_list"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_item_location_separator" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
